<resources>
    <string name="app_name">Musician Exchange</string>

    <string name="action_sign_in_short">Regístrate</string>
    <string name="email">Email</string>
    <string name="minimum_password">La contraseña ha de tener más de 6 caractéres</string>
    <string name="auth_failed">Error: comprueba los datos</string>
    <string name="change_email">Cambiar dirección de correo</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="send_password_reset_email">Enviar correo de reinicio de contraseña</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_link_to_register">No eres miembro? Regístrate ahora</string>
    <string name="btn_link_to_login">Tienes cuenta? Entra ahora</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Reiniciar contraseña</string>
    <string name="btn_back"><![CDATA[<< Atrás]]></string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Borrar</string>
    <string name="btn_sign_out">Cerrar sesión</string>
    <string name="lbl_forgot_password">Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Sólo necesitamos tu correo para mandarte las instrucciones</string>
    <string name="logo">logo</string>
    <string name="btn_main_Wee">Pulsame!</string>


    <string name="title_activity_main2">Musician Exchange</string>
    <string name="navigation_drawer_open">Abrir el menú</string>
    <string name="navigation_drawer_close">Cerrar el menú</string>
    <string name="nav_header_title">Musician Exchange</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Listas de reproducción</string>
    <string name="menu_gallery">Anuncios de venta</string>
    <string name="menu_slideshow">Anuncios de grupos</string>
    <string name="menu_tools">Conciertos</string>
    <string name="menu_share">Publicar anuncio de grupo</string>
    <string name="menu_send">Publicar anuncio de venta</string>
</resources>

