<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/fl_listas_rep"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/fl_local_concierto"
                android:title="@string/menu_tools"/>
        <item android:title="Anuncios"/>
        <group
        >
            <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/fl_local_venta"
                    android:title="@string/menu_gallery"/>
            <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/fl_radio"
                    android:title="@string/menu_slideshow"/>
        </group>
        <item android:title="Publicar"/>
        <group
        >
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/fl_mas_solid"
                    android:title="@string/menu_send"/>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/fl_mas"
                    android:title="@string/menu_share"/>
        </group>
    </group>

</menu>
